# ae-in-workflow

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  image_selector.py  pose_editor.py  pyproject.toml  requirements.txt  setup.py  zimage_i2l.py
example_workflows/: COMPLEX AE ZIMAGE I2L2I.json  SIMPLE AE ZIMAGE I2L2I v2.json  SIMPLE AE ZIMAGE I2L2I.json
web/: index.html
